--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <!-- Cartoon-style fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400;500;600;700&family=Balsamiq+Sans:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Fredoka:wght@300;400;500;600;700&family=Balsamiq+Sans:wght@400;700&display=swap" rel="stylesheet">
   <style>
     /* Custom scrollbar for that clean CDI look */
     ::-webkit-scrollbar {
